--- a/src/app/modules/ingresos/pages/ver-ingreso/ver-ingreso.html
+++ b/src/app/modules/ingresos/pages/ver-ingreso/ver-ingreso.html
@@ -44,7 +44,7 @@
                     <div class="info-item">
                         <span class="info-label">Fecha de Ingreso</span>
                         <span class="info-value">
-              {{ ingreso.fecha?.toDate ? (ingreso.fecha.toDate() | date:'dd/MM/yyyy HH:mm') : (ingreso.fecha | date:'dd/MM/yyyy HH:mm') }}
+              {{ ingreso.fecha?.toDate ? (ingreso.fecha.toDate() | date:'dd/MM/yyyy') : (ingreso.fecha | date:'dd/MM/yyyy') }}
             </span>
                     </div>
                 </div>
